--- a/views/tickets.hbs
+++ b/views/tickets.hbs
@@ -85,6 +85,8 @@
                         </div>
                     </div>
                 </form>
+
+                <span class="kostos">Κόστος: <span id="kostos-eis">10</span>ευρώ</span>
             </div>
         </div>
 
@@ -107,6 +109,8 @@
                 </div>
             </form>
 
+            <span class="finalCost">Συνολικό Κόστος: <span id="kostos-teliko">10</span>ευρώ </span>
+
              <p>*Η πληρωμή των εισιτηρίων γίνεται με την υπόδειξη του αποδεικτικού που προσκομίσατε στο προσωπικό σας email
             κατά την είσοδό σας στην πινακοθήκη.Σε περίπτωση μειωμένου εισιτηρίου κατηγορίας φοιτητή είναι απαραίτητη 
             η υπόδειξη της φοιτητικής σας ταυτότητας. </p>
@@ -128,7 +132,7 @@
             let clone = ticket.cloneNode(true);
             //add event listener to the clone when i hit the checkbox the background color to become orange
             clone.querySelector('h2').textContent = `Εισιτήριο #${i}`;
-            let inputs = clone.querySelectorAll('input, select');
+            let inputs = clone.querySelectorAll('input, select, #kostos-eis');
             inputs.forEach(input => {
                 let newName = input.name + i;
                 let newId = input.id + i;
@@ -147,6 +151,11 @@
             ektheseisDivs.forEach(ektheseisDiv => {
                 ektheseisDiv.addEventListener('click', function (event) {
                     event.target.classList.toggle('selected');
+                    let uniqueId = selectElement.id.replace('katigoria1', ''); // Extract the uniqueId from the select element's id
+                    let cost_indiv = document.querySelector(`#kostos-eis${uniqueId}`);
+                    if (ektheseisDiv.classList.contains('selected')){
+                        cost_indiv.innerHTML+=4;
+                    }
                 });
             });
         });
@@ -160,6 +169,30 @@
         stickyButton.innerHTML = '<input type="button" value="Ολοκλήρωση">';
         document.body.appendChild(stickyButton);
     });
+
+    function calculate_cost(selectElement) {
+        let selectedValue = selectElement.value;
+        let uniqueId = selectElement.id.replace('katigoria1', ''); // Extract the uniqueId from the select element's id
+        let cost_indiv = document.querySelector(`#kostos-eis${uniqueId}`);
+
+        if (selectedValue === "") {
+            cost = 10;
+        }
+
+        if (selectedValue === "foititis" || selectedValue === "disabled") {
+            cost = 5;
+        }
+
+        if (selectedValue === "polyteknoi") {
+            cost = 7.5;
+        }
+
+        if (selectedValue === "paidia") {
+            cost = 0;
+        }
+
+        cost_indiv.innerHTML = cost;
+    }
 
 
 
