--- a/views/biography.hbs
+++ b/views/biography.hbs
@@ -5,7 +5,7 @@
             <div class="overlay-text">
                 <h2><strong>Earliest Paintings</strong></h2>
                 <h3><strong>(1881-1883)</strong></h3>
-                <a href="/biography/earliest-paintings">Discover more-&gt;</a>
+                <a href="/biography/earliest-paintings">Ανακαλύψτε περισσότερα-&gt;</a>
             </div>
         </div>
 
@@ -14,7 +14,7 @@
             <div class="overlay-text">
                 <h2><strong>Nuenen / Antwerp</strong></h2>
                 <h3><strong>(1883-1886)</strong></h3>
-                <a href="/biography/nuenen">Discover more-&gt;</a>
+                <a href="/biography/nuenen">Ανακαλύψτε περισσότερα-&gt;</a>
             </div>
         </div>
 
@@ -23,7 +23,7 @@
             <div class="overlay-text">
                 <h2><strong>Paris</strong></h2>
                 <h3><strong>(1886-1888)</strong></h3>
-                <a href="/biography/paris">Discover more-&gt;</a>
+                <a href="/biography/paris">Ανακαλύψτε περισσότερα-&gt;</a>
             </div>
         </div>
 
@@ -32,7 +32,7 @@
             <div class="overlay-text">
                 <h2><strong>Arles</strong></h2>
                 <h3><strong>(1888-1889)</strong></h3>
-                <a href="/biography/arles">Discover more-&gt;</a>
+                <a href="/biography/arles">Ανακαλύψτε περισσότερα-&gt;</a>
             </div>
         </div>
 
@@ -41,7 +41,7 @@
             <div class="overlay-text">
                 <h2><strong>Saint-Remy</strong></h2>
                 <h3><strong>(1889-1890)</strong></h3>
-                <a href="/biography/saint-remy">Discover more-&gt;</a>
+                <a href="/biography/saint-remy">Ανακαλύψτε περισσότερα-&gt;</a>
             </div>
         </div>
 
@@ -50,7 +50,7 @@
             <div class="overlay-text">
                 <h2><strong>Auvers-sur-Oise</strong></h2>
                 <h3><strong>(1890)</strong></h3>
-                <a href="/biography/auvers-sur-oise">Discover more-&gt;</a>
+                <a href="/biography/auvers-sur-oise">Ανακαλύψτε περισσότερα-&gt;</a>
             </div>
         </div>
     </section>
