--- a/public/tickets_style.css
+++ b/public/tickets_style.css
@@ -50,6 +50,7 @@ img {
 .episkeptis{
     width: 50%;
     display: none;
+    flex-wrap: nowrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -204,7 +205,7 @@ img {
     padding: 1%;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
     img {
         height: 40vh;
         align-self: flex-start;
@@ -231,22 +232,29 @@ img {
 
     .episkeptis{
         margin-top: 12%;
-        margin-left: 10%;
+        margin-left: 5%;
+        align-items: flex-start;
     }
 
-    .episkeptis div{
+    form.agora-ticket{
         width: 100%;
     }
 
     .episkeptis p{
         width: 100%;
+    }
+
+    @media screen and (max-width: 650px){
+        img{
+            max-height: 30vh;
+        }
     }
 
 }
 
-@media screen and (min-width: 801px) and (max-width: 1100px) {
+@media screen and (min-width: 901px) and (max-width: 1100px) {
     .episkeptis p{
-        width: 100%;
+        width: 80%;
     }
 
     .kratisi-eis {
@@ -266,6 +274,26 @@ img {
         width: 60%;
     }
 }
+
+@media screen and (min-width: 1101px) and (max-width: 1300px){
+
+    #elegxos{
+        width: 80%;
+    }
+
+    .episkeptis p{
+        width: 60%;
+    }
+
+}
+
+@media screen and (min-width: 1301px) and (max-width: 1380px){
+
+    #elegxos{
+        width: 80%;
+    }
+}
+
 
 
 /*BUY-TICKETS*/
@@ -393,79 +421,4 @@ p {
     font-size: 1.2em;
     color: white;
     margin-top: 3%;
-}
-
-@media screen and (max-width: 650px) {
-    .agora-ticket {
-        width: 100%;
-    }
-
-    .eidiki #katigoria,
-    .eidiki select,
-    .final_cost {
-        width: 60%;
-    }
-
-    #kratisi {
-        width: 40%;
-    }
-
-}
-
-@media screen and (min-width: 651px) and (max-width:800px) {
-
-    .agora-ticket {
-        width: 100%;
-    }
-
-    .name #onoma,
-    .email #mail,
-    .phone-number #phone,
-    .name input[type="text"] {
-        width: 50%;
-    }
-
-    .eidiki #katigoria,
-    .eidiki select,
-    .final_cost {
-        width: 40%;
-    }
-
-    #kratisi {
-        width: 30%;
-    }
-
-}
-
-@media screen and (min-width: 801px) and (max-width:1200px) {
-    .agora-ticket {
-        width: 100%;
-    }
-
-    .name #onoma,
-    .email #mail,
-    .phone-number #phone,
-    .name input[type="text"] {
-        width: 40%;
-    }
-
-    .eidiki #katigoria,
-    .eidiki select,
-    .final_cost {
-        width: 30%;
-    }
-
-    #kratisi {
-        width: 20%;
-    }
-}
-
-@media screen and (min-width: 1201px) and (max-width:1400px) {
-
-    .name #onoma,
-    .email #mail,
-    .phone-number #phone,
-    .name input[type="text"] {
-        width: 100%;
-    }
 }
